<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_layout_item"
    app:cardCornerRadius="@dimen/corner_radius_layout_item"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/padding_linear_lyt_layout_item">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ownerIconView"
                android:layout_width="@dimen/width_owner_Icon_view_layout_item"
                android:layout_height="@dimen/height_owner_Icon_view_layout_item"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_zero"
                android:contentDescription="@string/placeholder_repository_owner"
                android:maxWidth="@dimen/max_width_iv_owner_Icon_view_layout_item"
                android:src="@drawable/jetbrains" />

            <!-- Repository Name -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repositoryNameView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_start_repo_name_view_layout_item"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/text_repo_name_view_layout_item"
                android:textStyle="bold"
                tool:text="@string/placeholder_repository_name" />

            <ImageView
                android:id="@+id/ivBookmarked"
                android:layout_width="@dimen/width_iv_bookmarked_layout_item"
                style="@style/Theme.AndroidEngineerCodeCheck.ImageViewIcon"
                android:layout_height="@dimen/height_iv_bookmarked_layout_item"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/open_in_browser"
                android:scaleType="centerCrop"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_bookmark_added_48dp" />

        </LinearLayout>

        <View
            android:id="@+id/viewHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_view_horizontal_layout_item"
            android:layout_marginTop="@dimen/margin_top_view_horizontal_layout_item"
            android:background="@color/gray_fab" />

        <!-- Repository Description -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/repositoryDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_tv_repo_description_layout_item"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#777766"
            android:textSize="@dimen/text_tv_repo_description_layout_item"
            tool:text="@string/placeholder_repository_description" />

        <!-- Repository Stars and Forks -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_lyt_lang_stars"
            android:orientation="horizontal">

            <!-- Stars Icon and Count -->
            <ImageView
                android:layout_width="@dimen/width_iv_lang_stars"
                android:layout_height="@dimen/height_iv_lang_stars"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_language_48dp" />

            <!-- Repository Language -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repositoryLanguageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_start_tv_lang_layout_item"
                android:textSize="@dimen/text_tv_lang_layout_item"
                tool:text="@string/placeholder_language" />

            <!-- Stars Icon and Count -->
            <ImageView
                android:layout_width="@dimen/width_iv_lang_stars"
                android:layout_height="@dimen/height_iv_lang_stars"
                android:layout_marginStart="@dimen/margin_start_iv_lang_stars"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_stargazor_48dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/repositoryStargazersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_start_tv_stars_layout_item"
                android:textSize="@dimen/text_tv_lang_stars"
                tool:text="@string/placeholder_stargazors" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>