<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lytRepoBasicData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ownerIconView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:contentDescription="@string/placeholder_repository_owner"
                    android:maxWidth="60dp"
                    android:src="@drawable/jetbrains"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Repository Name -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryNameView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/vGuideBasicData"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/ownerIconView"
                    app:layout_constraintTop_toTopOf="parent"
                    tool:text="@string/placeholder_repository_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryOwnerTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#777766"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/ownerIconView"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryNameView"
                    tool:text="@string/placeholder_repository_owner_type_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryOwnerTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#777766"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/repositoryOwnerTypeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryNameView"
                    tool:text="@string/placeholder_repository_owner_type" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryLanguageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#777766"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ownerIconView"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryOwnerTypeLabel"
                    tool:text="@string/placeholder_repository_language_label" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryLanguageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#777766"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/repositoryLanguageLabel"
                    app:layout_constraintTop_toBottomOf="@+id/repositoryOwnerTypeTextView"
                    tool:text="@string/placeholder_repository_owner_type" />

                <ImageView
                    android:id="@+id/ivNavigateToNext"
                    style="@style/Theme.AndroidEngineerCodeCheck.ImageViewActionIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/open_in_browser"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/hGuideBasicDataAction"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_navigate_next_48dp" />

                <ImageView
                    android:id="@+id/ivDeleteBookmark"
                    style="@style/Theme.AndroidEngineerCodeCheck.ImageViewActionIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/remove_from_bookmarks"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hGuideBasicDataAction"
                    app:srcCompat="@drawable/ic_delete_48dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vGuideBasicData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.90" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/hGuideBasicDataAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/viewHorizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray_fab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lytRepoBasicData" />

            <!-- Repository Stars and Forks -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewHorizontal">

                <!-- Stars Icon and Count -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="0dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_stargazor_48dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryStargazersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    tool:text="@string/placeholder_stargazors" />

                <!-- Stars Icon and Count -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_fork_right_48dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryForksTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    tool:text="@string/placeholder_stargazors" />

                <!-- Stars Icon and Count -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="25dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_open_issues_48dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repositoryOpenIssuesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    tool:text="@string/placeholder_stargazors" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
