<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="DetailsVM"
            type="jp.co.yumemi.android.code_check.ui.viewmodel.repodetail.RepoDetailsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_scroll_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/ownerIconView"
                    android:layout_width="@dimen/width_iv_owner_icon_view"
                    android:layout_height="@dimen/height_iv_owner_icon_view"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_iv_owner_icon_view"
                    android:contentDescription="@string/placeholder_repository_owner"
                    android:maxWidth="@dimen/max_width_owner_icon_view"
                    android:src="@drawable/jetbrains" />

                <ImageView
                    android:id="@+id/ivBookmarked"
                    style="@style/Theme.AndroidEngineerCodeCheck.ImageViewIcon"
                    android:layout_width="@dimen/width_iv_bookmarked"
                    android:layout_height="@dimen/height_iv_bookmarked"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_bookmark_added_48dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_name_view"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@{DetailsVM.gitHubRepoDetails.fullName}"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/text_name_view"
                    android:textStyle="bold"
                    tools:text="JetBrains/Kotlin" />

                <TextView
                    android:id="@+id/languageView"
                    style="@style/ValueTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_horizontal_language_view"
                    android:layout_marginTop="@dimen/margin_top_language_view"
                    android:gravity="center"
                    android:text="@{DetailsVM.gitHubRepoDetails.description}"
                    android:textSize="@dimen/text_language_view"
                    tools:text="@string/placeholder_repository_description" />

                <TextView
                    android:id="@+id/txtLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_tv_language"
                    android:gravity="center"
                    android:text="@{DetailsVM.gitHubRepoDetails.language}"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/text_tv_language"
                    android:textStyle="bold"
                    tools:text="@string/placeholder_language" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_lyt_stars"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblStars"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_end_lyt_stars"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/label_stars"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_lyt_stars"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/width_iv_lyt_stars"
                        android:layout_height="@dimen/height_iv_lyt_stars"
                        android:layout_gravity="center"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_stargazor_48dp" />

                    <TextView
                        android:id="@+id/starsView"
                        style="@style/ValueTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_start_stars_view"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@{DetailsVM.gitHubRepoDetails.stargazersCount.toString()}"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/text_stars_view"
                        android:textStyle="bold"
                        tools:text="38530 stars" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_lyt_watchers"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblWatchers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_end_lyt_watchers"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/label_watchers"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_lyt_watchers"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/width_iv_lyt_watchers"
                        android:layout_height="@dimen/height_iv_lyt_watchers"
                        android:layout_gravity="center"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_watcher_48dp" />

                    <TextView
                        android:id="@+id/watchersView"
                        style="@style/ValueTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_start_watchers_view"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@{DetailsVM.gitHubRepoDetails.watchers.toString()}"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/text_watchers_view"
                        android:textStyle="bold"
                        tools:text="38530 watchers" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_lyt_forks"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblForks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_end_lyt_forks"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/label_forks"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_lyt_forks"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/width_iv_lyt_forks"
                        android:layout_height="@dimen/height_iv_lyt_forks"
                        android:layout_gravity="center"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_fork_right_48dp" />

                    <TextView
                        android:id="@+id/forksView"
                        style="@style/ValueTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_start_forks_view"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@{DetailsVM.gitHubRepoDetails.forksCount.toString()}"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/text_forks_view"
                        android:textStyle="bold"
                        tools:text="4675 forks" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_lyt_open_issues"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblOpenIssues"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin_end_lyt_open_issues"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/label_open_issues"
                        android:textAlignment="viewEnd"
                        android:textSize="@dimen/text_lyt_open_issues"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/width_iv_lyt_open_issues"
                        android:layout_height="@dimen/height_iv_lyt_open_issues"
                        android:layout_gravity="center"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_open_issues_48dp" />

                    <TextView
                        android:id="@+id/openIssuesView"
                        style="@style/ValueTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_start_open_issues_view"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:text="@{DetailsVM.gitHubRepoDetails.openIssuesCount.toString()}"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/text_open_issues_view"
                        android:textStyle="bold"
                        tools:text="131 open issues" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/sheetFabAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginBottom="@dimen/margin_bottom_sheet_fab_all"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_anchor="@id/navFloatingActionButton"
            app:layout_anchorGravity="top|center_horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabBookmark"
                style="@style/Theme.AndroidEngineerCodeCheck.FabSpeedDial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_fab_bookmark"
                android:contentDescription="@string/add_to_bookmarks"
                app:fabSize="mini"
                app:srcCompat="@drawable/ico_bookmark_add_24dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabOpenInBrowser"
                style="@style/Theme.AndroidEngineerCodeCheck.FabSpeedDial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_fab_open_in_browser"
                android:layout_marginEnd="@dimen/margin_end_fab_open_in_browser"
                android:layout_marginBottom="@dimen/margin_bottom_fab_open_in_browser"
                android:contentDescription="@string/open_in_browser"
                app:fabSize="mini"
                app:srcCompat="@drawable/ico_open_in_browser_24dp" />

        </LinearLayout>

        <!-- Floating action button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/navFloatingActionButton"
            style="@style/FloatingButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_nav_floating_action_button"
            android:contentDescription="@string/placeholder_repository_name"
            android:src="@drawable/ic_navigation_48dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
